add notify toast

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
-        "laravel-mix-tailwind": "^0.1.0"
+        "laravel-mix-tailwind": "^0.1.0",
+        "react-toastify": "^6.0.8"
     }
 }
